Prevent screwed up layout on long Content-Types
Some Content-Types (especially Vendor specific Content-Types)
can be rather long. This breaks the layout so prevent
rendering too wide select boxes by default.

--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -365,10 +365,6 @@
         border: 1px solid #aaa;
     }
 
-    .parameter-content-type select {
-        max-width:300px;
-    }
-
     h1 {
         color: black;
         font-size: 1.5em;
@@ -747,6 +743,9 @@
                                     input[type='text'].error {
                                         outline: 2px solid black;
                                         outline-color: #cc0000;
+                                    }
+                                    select[name='parameterContentType'] {
+                                        max-width:300px;
                                     }
                                 }
                                 div.response {
